--- a/assets/style.css
+++ b/assets/style.css
@@ -78,6 +78,7 @@ nav {
 footer {
     background-color: rgb(255, 192, 17);
     height: 6rem;
+    margin: 0;
     position: fixed;
     padding-top: 1rem;
     bottom: 0;
